--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Your awesome title
-author: GitHub User
-email: your-email@domain.com
+author: Gayeon (kaya)
+email: kgy1559@gmail.com
 description: > # this means to ignore newlines until "show_exerpts:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -12,16 +12,15 @@ show_excerpts: true # set to true to show excerpts on the homepage
 sass:
   sass_dir: _sass
 plainwhite:
-  name: Adam Denisov
-  tagline: Developer. Designer
+  name: Gayeon (kaya)
+  tagline: Developer.
   date_format: "%b %-d, %Y"
   sitemap: true # set to true to generate sitemap.xml content
 
   # generate social links in footer
   social_links:
-    twitter: thelehhman
-    github:  thelehhman
-    linkedIn: in/thelehhman
+    github:  gayeon1025
+    linkedIn: in/gayeon-kim-ab07401a6
     rss: rss
     # dribbble: jekyll
     # flickr:   jekyll
@@ -36,6 +35,11 @@ plainwhite:
     #   instance: example.com
     # - username: jekyll2
     #   instance: example.com
+   
+  # navigation
+  navigation:
+   - title: My Work
+     url: "/my-work"
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
